[gd_scene load_steps=13 format=3 uid="uid://myhwiai8lqgc"]

[ext_resource type="Script" path="res://ui/minigames/lock/minigame_unlock.gd" id="1_snkyb"]
[ext_resource type="Script" path="res://ui/minigames/lock/minigame_unlock_lock.gd" id="2_d405j"]
[ext_resource type="Texture2D" uid="uid://cyd8lm0a7c2y3" path="res://sprites/minigames/spr_mg_lock_locked.png" id="3_14ntb"]
[ext_resource type="Script" path="res://ui/minigames/lock/minigame_unlock_key.gd" id="4_hbesp"]
[ext_resource type="Texture2D" uid="uid://byvk5d38a8v7o" path="res://sprites/minigames/spr_mg_lock_key.png" id="5_qaojm"]
[ext_resource type="Texture2D" uid="uid://68bm15dy6emc" path="res://sprites/minigames/spr_mg_lock_unlocked.png" id="6_fistc"]
[ext_resource type="Texture2D" uid="uid://ddoejbd4bnit4" path="res://sprites/minigames/spr_mg_lock_bottom_bg.png" id="7_421qm"]
[ext_resource type="Script" path="res://ui/minigames/lock/minigame_unlock_turn.gd" id="8_x3ogq"]
[ext_resource type="Texture2D" uid="uid://c83x6vxmfoij7" path="res://sprites/minigames/spr_mg_lock_bottom_keyhole.png" id="9_l2342"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n8ji8"]
radius = 39.7346
height = 91.1686

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_awqer"]
radius = 27.9272
height = 148.945

[sub_resource type="CircleShape2D" id="CircleShape2D_rlny3"]
radius = 4.55828

[node name="minigame_unlock_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_snkyb")

[node name="Phase1" type="Node2D" parent="."]

[node name="Lock" type="Area2D" parent="Phase1"]
position = Vector2(160, 180)
rotation = -0.210339
scale = Vector2(0.72, 0.72)
disable_mode = 2
collision_layer = 0
collision_mask = 2147483648
collision_priority = 2.0
input_pickable = false
monitorable = false
script = ExtResource("2_d405j")

[node name="SprMgLockLocked" type="Sprite2D" parent="Phase1/Lock"]
texture = ExtResource("3_14ntb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Phase1/Lock"]
position = Vector2(8, 220)
rotation = -1.6158
shape = SubResource("CapsuleShape2D_n8ji8")

[node name="Key" type="Area2D" parent="Phase1"]
position = Vector2(1140, 567)
rotation = -0.633404
scale = Vector2(0.537109, 0.537109)
collision_layer = 2147483648
collision_mask = 0
input_pickable = false
script = ExtResource("4_hbesp")

[node name="SprMgLockKey" type="Sprite2D" parent="Phase1/Key"]
texture = ExtResource("5_qaojm")

[node name="Head" type="CollisionShape2D" parent="Phase1/Key"]
position = Vector2(0, -215.971)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_awqer")

[node name="Grabbable" type="Area2D" parent="Phase1/Key"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Phase1/Key/Grabbable"]
polygon = PackedVector2Array(-5.58569, -180.596, -33.5128, -63.3019, -35.3746, 83.7819, -87.5056, 113.571, -104.262, 175.011, -76.3347, 229.004, -13.033, 242.036, 33.5127, 236.451, 83.7817, 210.386, 100.538, 180.596, 96.8145, 126.604, 59.5781, 89.3673, 29.7891, 68.8873, 29.7891, -29.7891, 29.7891, -154.531)

[node name="Phase2" type="Node2D" parent="."]
visible = false

[node name="SprMgLockUnlocked" type="Sprite2D" parent="Phase2"]
visible = false
position = Vector2(640, 319)
texture = ExtResource("6_fistc")

[node name="SprMgLockBottomBg" type="Sprite2D" parent="Phase2"]
position = Vector2(635, 340)
texture = ExtResource("7_421qm")

[node name="Keyhole" type="Area2D" parent="Phase2"]
position = Vector2(635, 340)
script = ExtResource("8_x3ogq")

[node name="RotationHelper" type="Node2D" parent="Phase2/Keyhole"]
position = Vector2(-14.9999, 19)
scale = Vector2(1.12499, 0.496042)

[node name="SprMgLockBottomKeyhole" type="Sprite2D" parent="Phase2/Keyhole"]
position = Vector2(-14.9999, 19)
texture = ExtResource("9_l2342")
offset = Vector2(15, -19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Phase2/Keyhole"]
position = Vector2(-16, 15)
scale = Vector2(13.592, 12.36)
shape = SubResource("CircleShape2D_rlny3")

[connection signal="area_shape_entered" from="Phase1/Lock" to="Phase1/Lock" method="_on_area_shape_entered"]
[connection signal="body_entered" from="Phase1/Lock" to="Phase1/Lock" method="_on_key_body_entered"]
[connection signal="body_shape_entered" from="Phase1/Lock" to="Phase1/Lock" method="_on_body_shape_entered"]
[connection signal="body_entered" from="Phase1/Key" to="Phase1/Key" method="_on_body_entered"]
[connection signal="mouse_entered" from="Phase1/Key" to="Phase1/Key" method="_on_mouse_entered"]
[connection signal="input_event" from="Phase1/Key/Grabbable" to="Phase1/Key" method="_on_grabbable_input_event"]
[connection signal="input_event" from="Phase2/Keyhole" to="Phase2/Keyhole" method="_on_input_event"]
[connection signal="mouse_entered" from="Phase2/Keyhole" to="Phase2/Keyhole" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Phase2/Keyhole" to="Phase2/Keyhole" method="_on_mouse_exited"]
